Bugfix/UX: Avoid clipping of simple color rects on-hover in JFX

--- a/stylesheets/simple.css
+++ b/stylesheets/simple.css
@@ -17,6 +17,7 @@
 
 .swatch-color:hover {
   transform: scale(1.2);
+  z-index:   10;
 }
 
 .swatch-color.selected.light {
